<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="dashboard">Dashboard</string>
    <string name="diary">Diary</string>
    <string name="recipe">Recipe</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_meals">My Meals</string>
    <string name="my_recipes">My Recipes</string>
    <string name="my_foods">My Foods</string>
    <string name="log_food">Log Food</string>
    <string name="water">Water</string>
    <string name="weight">Weight</string>
    <string name="exercise">Exercise</string>
    <string name="search">Search</string>
    <string name="date_created">Date Created</string>
    <string name="todo">TODO</string>
    <string name="directions">Directions</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="snack">SNACK</string>
    <string name="select_a_meal">Select a meal</string>
    <string name="create_a_meal">Create a meal</string>
    <string name="new_recipe">New recipe</string>
    <string name="new_food">New food</string>
    <string name="new_exercise">New exercise</string>
    <string name="new_water">New water</string>
    <string name="new_weight">New weight</string>
    <string name="next">Next</string>
    <string name="search_results">Search Results</string>
    <string name="add_the_list_of_ingredients_in_the_recipe">Add the list of ingredients in the recipe.</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="no_ingredients">No Ingredients</string>
    <string name="ingredient_detail">Ingredient Detail</string>
    <string name="search_ingredient">Search Ingredient</string>
    <string name="total_calories">Total calories: %d kcal</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="create_food">Create Food</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="servings_size">Servings Size</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="add_food">Add Food</string>
    <string name="add_meal">Add Meal</string>
    <string name="my_meal">My Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="today_diary">Today Diary</string>
    <string name="add_water">Add Water</string>
    <string name="add_weight">Add Weight</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="user_weight_goal">Select Weight Goal</string>
    <string name="user_baseline_activity_level">Select Activity Level</string>
    <string name="user_basic_info">Basic Info</string>
    <string name="user_personal_info">Personal Info</string>
    <string name="log_water">Log Water</string>
    <string name="log_weight">Log Weight</string>
    <string name="log_exercise">Log Exercise</string>

    <string-array name="vietnam_provinces">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>