<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_black"
    tools:context=".presentation.log_recipe.IngredientsFragment">

    <LinearLayout
        android:id="@+id/ingredientsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total calories: "
            android:textColor="@color/white"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="80dp"
            android:visibility="gone"
            android:clipToPadding="false"
            android:layout_marginBottom="80dp"
            tools:listitem="@layout/item_ingredient"
            tools:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgEmptyState"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:alpha="0.7"
            android:src="@drawable/ic_magnifying_glass"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvEmptyStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_ingredients"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmptyStateDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_the_list_of_ingredients_in_the_recipe"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAddIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/add_ingredients"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="24dp" />

    </LinearLayout>

</FrameLayout>
