<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.log_meal.LogMealDiaryFragment"
    android:background="@color/dark_gray"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_sort_button"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_add"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_circle_button"
            android:backgroundTint="@color/white"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Photo"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_below="@id/ivCamera"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_meal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_servings"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/et_servings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:background="@android:color/transparent"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servings_size"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_servings_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1 serving"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/circle_calories"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Carbs -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0g"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Carbs"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Fat -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0g"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fat"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Protein -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0g"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Protein"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/dark_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add instructions for making this meal"
            android:textColorHint="@color/light_gray"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:background="@null"
            android:paddingTop="8dp"/>
    </LinearLayout>

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_gravity="bottom"-->
    <!--        android:gravity="bottom"-->
    <!--        android:layout_weight="1">-->

    <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--            android:id="@+id/fabAdd"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:contentDescription="@string/todo"-->
    <!--            android:src="@drawable/baseline_add"-->
    <!--            app:backgroundTint="@color/blue"-->
    <!--            app:maxImageSize="40dp"-->
    <!--            android:layout_alignParentEnd="true"-->
    <!--            android:layout_margin="16dp"/>-->
    <!--    </RelativeLayout>-->

    <TextView
        android:id="@+id/tvMealItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meal Items"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:visibility="invisible"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMealItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>